--- a/sentimentIt/vignettes/sentimentIt_vignette.Rmd
+++ b/sentimentIt/vignettes/sentimentIt_vignette.Rmd
@@ -9,8 +9,7 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-Background
-------
+## Background
 
 This is a tutorial on how to use the SentimentIt R package. SentimentIt provides a pairwise comparison framework for fast, flexible, and reliable human coding of political texts.
 
@@ -19,14 +18,12 @@ The system we designed, which we label SentimentIt, is based on the following pr
 Second, we designed the task structure to be cognitively appropriate for non-experts. Specifically, we ask workers to conduct pairwise comparisons of texts, simply indicating which text is more extreme along a single dimension of interest (e.g., “Which text is more positive?”). A significant body of research indicates that pairwise comparisons can reduce the cognitive burden for respondents, improve the reliability of responses, and eliminate problems such as differential item functioning and reference group effects that plague alternative question formats such as Likert scales or sliders (e.g., King et al. 2004; Oishi et al. 2005).
 
 
-Create the necessary accounts
-------
+## Create the necessary accounts
 
 Before interacting with the package in R, go to the following link: https://www.sentimentit.com/documentation/getting_started. The manual attached to the link explains how to create the necessary accounts with Amazon and SentimentIt so you can interact with Mechanical Turk. A SentimentIt account MUST be created before the SentimentIt R package can be used. 
 
 
-Install/load the SentimentIt R package
-------
+## Install/load the SentimentIt R package
 
 Once the five steps of the SentimentIt manual are completed, install the SentimentIt package in R using the following command:
 
@@ -39,8 +36,7 @@ library("SentimentIt")
 ```
 
 
-Assign ID numbers to data objects
-------
+## Assign ID numbers to data objects
 
 Once the package is installed, you need to prepare your data for the pairwise comparisons. The first step is to assign unique ID numbers to each object of comparison using the `readText()` function. 
 
@@ -84,8 +80,9 @@ reviews_with_ids <- readText(email = "johndoe@school.edu", password = "12345",
 
 -   `...`: Additional arguments passed to either `scan()` or `read.table()` depending on type of data used.
 
-Generate batches to store pairwise comparisons in
-------
+The `readText()` function outputs a data frame identical to the data frame passed to `read_documents_from`, except the new data frame should include an additional column containing a unique ID number for each comparison item.
+
+## Generate batches to store pairwise comparisons in
 
 At this point, the data with unique IDs should be stored both in your R workspace and in the filepath you specified in `readText()`. The next step is to create unique batch ID numbers. Each batch ID number will be associated with a "batch", which contains a portion of all comparisons to be sent to Mechanical Turk. Instead of sending all comparisons to Mechanical Turk at once, you can decide to release each batch at your discretion.
 
@@ -105,11 +102,12 @@ batch_ids <- createBatches(email = "johndoe@school.edu", password = "12345",
 
 -   `task_setting_id`: Integer vector, the ID number of the HIT settings you would like to use for these batches of comparisons.
 
--   `num_batches`: Integer vector, the number of separate batches in which you would like to send the comparisons to Mechanical Turk. Default to 1. 
+-   `num_batches`: Integer vector, the number of separate batches in which you would like to send the comparisons to Mechanical Turk. Default to 1.
+
+The `createBatches()` function outputs an integer vector of length equal to `num_batches`. These integers are the unique ID numbers for the batches.
 
 
-Fill batches with comparisons
-------
+## Fill batches with comparisons
 
 At this point, you should have run both the `readText()` and `createBatches()` functions and you should have data with unique IDs. You should also have as many unique batch IDs as the number of batches you would like to send out the comparisons in. The next step is to fill these batches with random pairings of your data objects. Each batch you send to Mechanical Turk will contain these random pairings and MTurk workers will compare some latent trait between the paired objects.
 
@@ -136,15 +134,16 @@ makeComps(email = "johndoe@school.edu", password = "12345",
 
 -   `number_per`: Integer vector, how many documents per batch to be compared.
 
--   `batch_id`: Numeric vector, the unique batch ID numbers you generated in `createBatches()`.
+-   `batch_id`: Integer vector, the unique batch ID numbers you generated in `createBatches()`.
 
 -   `question`: Character vector, the question the worker will see when comparing the texts.
 
 -   `pairwise_path`: Character vector, the filepath to save the created pairwise matrix. Default is "pairwise.Rdata".
 
+The `makeComps()` function outputs a named integer vector containing `batch_id`.
 
-Send batches to Mechanical Turk
-------
+
+## Send batches to Mechanical Turk
 
 At this point, you should have run the `readText()`, `createBatches()`, and `makeComps()` functions and should therefore have pairwise comparisons set up under batches in the SentimentIt server. You are now prepared to send your batches to Mechanical Turk to have workers complete the pairwise comparisons of the data. 
 
@@ -168,8 +167,7 @@ createTasks(email = "johndoe@school.edu", password = "12345",
 -   `batch_id`: Numeric vector, the unique batch ID numbers you generated in `createBatches()`. Only specify the ID numbers for the batches you want to submit to Mechanical Turk now. Batches can be released at separate times.
 
 
-Check the status of a batch in Mechanical Turk
-------
+## Check the status of a batch in Mechanical Turk
 
 Once you have submitted batches of comparisons to Mechanical Turk, you can check their status to see how many comparisons in the batch have been completed. This can be done using the `checkBatches()` function. To check the status of a batch, all you need is the batch ID number.
 
@@ -187,9 +185,11 @@ batchStatus(email = "johndoe@school.edu", password = "12345",
 
 -   `batch_id`: Numeric vector, the ID number associated with a batch of comparisons you have already sent to Mechanical Turk.
 
+The `batchStatus()` function outputs a data frame containing `batch_id`, the total number of comparisons, the number of comparisons submitted, the number of comparisons completed, and the number of comparisons expired in the batch.
 
-Read in data for completed comparisons from SentimentIt
-------
+
+## Read in data for completed comparisons from SentimentIt
+
 
 Once you have sent the batches to Mechanical Turk using `createTasks()` and allowed some time for comparisons to be completed, you can retrieve data on the batches you sent. To retrieve this data, use the `readInData()` function. 
 
@@ -209,9 +209,10 @@ comp_output <- readInData(email = "johndoe@school.edu", password = "12345",
 
 -   `batch_id`: Numeric vector, the ID number associated with a batch of comparisons you have already sent to Mechanical Turk and would like to retrieve data on.
 
+The `readInData()` function outputs a data frame containing seven columns and two times as many rows as there are comparisons in the batch. The columns contain the batch ID, comparison ID, document ID, result, hit ID, worker ID, and time completed for each hit.
 
-Repost expired tasks from a batch to Mechanical Turk
-------
+
+## Repost expired tasks from a batch to Mechanical Turk
 
 When batches of comparisons are submitted to Mechanical Turk, some comparisons may not be completed before the batch expires. These incomplete tasks can be reposted to Mechanical Turk using the `repostExpired()` function.
 
@@ -230,8 +231,7 @@ repostExpired(email = "johndoe@school.edu", password = "12345",
 -   `batch_id`: Numeric vector, the ID number associated with the expired batch containing the incomplete comparisons you would like to repost.
 
 
-Estimate Stan model for worker reliability
-------
+## Estimate Stan model for worker reliability
 
 Once you have sent batches of comparisons to Mechanical Turk and retrieved the results, you can estimate the reliability of the workers completing each task using a Stan model. For more information on Stan models, refer to page 7 of the following paper: https://www.sentimentit.com/SentimentIt.pdf (Carlson + Montgomery).
 
@@ -267,9 +267,10 @@ stan_model2 <- fitStan(data = comp_output)
 
 -   `n.cores`: Integer vector, the number of cores to be used in Stan fit (Default is 3).
 
+The `fitStan()` function outputs a list containing two items: 1) an object of class "stanfit" and 2) a matrix.
 
-Use Stan model to assess worker reliability
-------
+
+## Use Stan model to assess worker reliability
 
 Once you have used the `fitStan()` function to estimate a Stan model, you can use this model to identify workers who are unreliable. The output from the Stan model, as well as the output from the completed comparisons, is required to identify unreliable workers.
 
@@ -295,6 +296,8 @@ ban_workers <- checkWorkers(stan_fit = stan_model[[1]], data = comp_output)
 -   `plot_hist`: If TRUE, plot the histogram of workers with a rug plot. Default is FALSE.
 
 -   `hist_path`: Save the histogram to path and file name specified. Default is NULL and no plot is saved.
+
+The `checkWorkers()` function outputs a list containing two items: 1) a character vector and 2) a matrix.
 
 
 Reference Paper
