--- a/sentimentIt/vignettes/sentimentIt_vignette.Rmd
+++ b/sentimentIt/vignettes/sentimentIt_vignette.Rmd
@@ -40,9 +40,9 @@ library("SentimentIt")
 
 Once the package is installed, you need to prepare your data for the pairwise comparisons. The first step is to assign unique ID numbers to each object of comparison using the `readText()` function. 
 
-The `readText()` function will take the data as an input, import it into the SentimentIt repository, and assign unique ID values to each object in the data. The function will then export the data to a specified file path, complete with ID numbers. If any objects already exist in the repository, the ID number for the existing object will be used instead of importing a duplicate.
+The `readText()` function will take the data as an input, import it into the SentimentIt repository, and assign unique ID values to each object in the data. The function will then export the data to a specified file path, complete with ID numbers. If any objects already exist in the repository, the ID number for the existing object will be used instead of importing a duplicate. The unique IDs will be permanently stored in the SentimentIt server.
 
-Your data should contain the set of objects you want to perform pairwise comparisons on. It may contain other data as well, but you will need to specify which column contains the data to be used in the pairwise comparisons. The best practice for running this function is to first import your data into your R workspace before running the function.
+Your data should contain the set of objects on which you want to perform pairwise comparisons. It may contain other data as well, but you will need to specify which column contains the data to be used in the pairwise comparisons. The best practice for running this function is to first import your data into your R workspace before running the function.
 
 The following example uses a sample dataset, "reviews.rda", to show how to use the `readText()` function to assign unique ID numbers
 
@@ -78,11 +78,11 @@ reviews_with_ids <- readText(email = "johndoe@school.edu", password = "12345",
 
 -   `quiet`: Argument passed to `scan()` function. Default is TRUE. Only needed when index is NULL.
 
--   `...`: Additional arguments passed to either `scan()` or `read.table()` depending on type of data used.
+-   `...`: Additional arguments passed to either `scan()` (https://stat.ethz.ch/R-manual/R-devel/library/base/html/scan.html) or `read.table()` (https://stat.ethz.ch/R-manual/R-devel/library/utils/html/read.table.html) depending on type of data used.
 
 The `readText()` function outputs a data frame identical to the data frame passed to `read_documents_from`, except the new data frame should include an additional column containing a unique ID number for each comparison item.
 
-## Generate batches to store pairwise comparisons in
+## Generate batches in which to store pairwise comparisons
 
 At this point, the data with unique IDs should be stored both in your R workspace and in the filepath you specified in `readText()`. The next step is to create unique batch ID numbers. Each batch ID number will be associated with a "batch", which contains a portion of all comparisons to be sent to Mechanical Turk. Instead of sending all comparisons to Mechanical Turk at once, you can decide to release each batch at your discretion.
 
@@ -109,9 +109,13 @@ The `createBatches()` function outputs an integer vector of length equal to `num
 
 ## Fill batches with comparisons
 
-At this point, you should have run both the `readText()` and `createBatches()` functions and you should have data with unique IDs. You should also have as many unique batch IDs as the number of batches you would like to send out the comparisons in. The next step is to fill these batches with random pairings of your data objects. Each batch you send to Mechanical Turk will contain these random pairings and MTurk workers will compare some latent trait between the paired objects.
+At this point, you should have run both the `readText()` and `createBatches()` functions and you should have data with unique IDs. You should also have as many unique batch IDs as the number of batches you would like to use to send out the comparisons. The next step is to fill these batches with random pairings of your data objects. Each batch you send to Mechanical Turk will contain these random pairings and MTurk workers will compare some latent trait between the paired objects.
 
-To generate these random pairings, run the `makeComps()` function, which will generate random pairings of your data objects and distribute them evenly among the number of batches you specify. Before running this function, you should have your unique batch ID numbers stored in your R workspace and you should have decided what quality you want to compare between the paired objects, which should be specified in the `question` input.
+To generate these random pairings, run the `makeComps()` function, which will generate random pairings of your data objects and distribute them evenly among the number of batches you specify. Before running this function, you should have your unique batch ID numbers stored in your R workspace. You should also determine what characteristic you want to measure in the texts. This should be specified as a character vector in the `question` input to the function.
+
+The screenshot below displays an example of the interface Mechanical Turk workers will interact with when completing a task. The title corresponds to the `question` parameter and the two texts underneath come from a pairwise comparison generated in the `makeComps()` function.
+
+![**Example of Mechanical Turk HIT**](/users/christianbaehr/desktop/mturk_example.png)
 
 Once the comparisons have been generated, they will be stored in the SentimentIt server and sent to Mechanical Turk when you direct them to. The function should return a vector of the batch IDs you provided. If not, the function did not correctly set up your batches. 
 
@@ -120,7 +124,7 @@ Once the comparisons have been generated, they will be stored in the SentimentIt
 makeComps(email = "johndoe@school.edu", password = "12345",
              ids = reviews_ids[,3], number_per = 10,
              batch_id = batch_ids,
-             question = "Below are two movie reviews. Identify which review you think is more positive.",
+             question = "Below is text taken from two movie reviews. Please choose the text that you think comes                 from the most positive review.",
              pairwise_path = "comparisons.Rdata")
 ```
 
@@ -149,7 +153,7 @@ At this point, you should have run the `readText()`, `createBatches()`, and `mak
 
 To send batches to Mechanical Turk, use the `createTasks()` function. As you can see in the below example, you can determine which batches you would like to send to Mechanical Turk by only specifying those specific batch IDs. You do not need to send them all at once.
 
-Note that when you run this function, workers will automatically be paid for the work they do in that batch, regardless of the quality of their work. In the SentimentIt system, any worker who completes a task is automatically paid every 24 hours.
+Note that when you run this function, workers will automatically be paid for the work they do in that batch, regardless of the quality of their work. In the SentimentIt system, any worker who completes a task is automatically paid every 24 hours. **Always make sure you have enough money in your Mechanical Turk account before using the `createTasks()` function to send jobs.**
 
 ```{r, eval = FALSE}
 
@@ -207,7 +211,7 @@ comp_output <- readInData(email = "johndoe@school.edu", password = "12345",
 
 -   `password`: Character vector, the password associated with `email`.
 
--   `batch_id`: Numeric vector, the ID number associated with a batch of comparisons you have already sent to Mechanical Turk and would like to retrieve data on.
+-   `batch_id`: Numeric vector, the ID number associated with a batch of comparisons you have already sent to Mechanical Turk for which you would like to retrieve data.
 
 The `readInData()` function outputs a data frame containing seven columns and two times as many rows as there are comparisons in the batch. The columns contain the batch ID, comparison ID, document ID, result, hit ID, worker ID, and time completed for each hit.
 
