--- a/sentimentIt/vignettes/sending_data.Rmd
+++ b/sentimentIt/vignettes/sending_data.Rmd
@@ -11,19 +11,15 @@ vignette: >
 
 # Background
 
-This is a tutorial on how to use the SentimentIt R package. SentimentIt provides a pairwise comparison framework for fast, flexible, and reliable human coding of political texts. The tutorial is broken up into three separate vignettes: one explaining how to send comparisons to Mechanical Turk and retrieve data, a second explaining how to perform analysis on retrieved data, and a third explaining how to use this analysis to identify and ban poorly performing workers in Mechanical Turk. This is the first of the three tutorials.
+This is a tutorial on how to use the SentimentIt R package. SentimentIt provides a pairwise comparison framework for fast, flexible, and reliable human coding of political texts. The tutorial consists of three separate vignettes: one explaining how to send comparisons to Mechanical Turk and retrieve data, a second explaining how to perform analysis once data has been retreived, and a third explaining how to regulate who can work on your comparisons in Mechanical Turk. This is the first of the three tutorials.
 
 The system we designed, which we label SentimentIt, is based on the following principles. First, it leverages human ability to understand language and socially constructed political concepts. Thus, our focus is measuring researcher-defined characteristics embedded within text (e.g., positivity). However, we exclude explicitly subjective characteristics (e.g., persuasiveness).
 
 Second, we designed the task structure to be cognitively appropriate for non-experts. Specifically, we ask workers to conduct pairwise comparisons of texts, simply indicating which text is more extreme along a single dimension of interest (e.g., “Which text is more positive?”). A significant body of research indicates that pairwise comparisons can reduce the cognitive burden for respondents, improve the reliability of responses, and eliminate problems such as differential item functioning and reference group effects that plague alternative question formats such as Likert scales or sliders (e.g., King et al. 2004; Oishi et al. 2005).
-<br>
-<br>
 
 # Create the necessary accounts
 
 Before interacting with the package in R, go to the following link: https://www.sentimentit.com/documentation/getting_started. The manual attached to the link explains how to create the necessary accounts with Amazon and SentimentIt so you can interact with Mechanical Turk. A SentimentIt account MUST be created before the SentimentIt R package can be used. 
-<br>
-<br>
 
 # Install/load the SentimentIt R package
 
@@ -36,8 +32,6 @@ install.packages("SentimentIt")
 
 library("SentimentIt")
 ```
-<br>
-<br>
 
 # readText
 
@@ -90,8 +84,6 @@ reviews_with_ids <- readText(email = "johndoe@school.edu", password = "12345",
 ### Output
 
 The `readText()` function outputs a data frame identical to the data frame passed to `read_documents_from`, except the new data frame should include an additional column containing a unique ID number for each comparison item.
-<br>
-<br>
 
 # createBatches
 
@@ -134,9 +126,8 @@ To generate these random pairings, run the `makeComps()` function, which will ge
 The screenshot below displays an example of the interface Mechanical Turk workers will interact with when completing a task. The title corresponds to the `question` parameter and the two texts underneath come from a pairwise comparison generated in the `makeComps()` function.
 <br>
 <br>
-![**Example of Mechanical Turk HIT**](/users/christianbaehr/desktop/mturk_example.png)
-<br>
-<br>
+![**Example of Mechanical Turk HIT**](mturk_example.png)
+
 Once the comparisons have been generated, they will be stored in the SentimentIt server and sent to Mechanical Turk when you direct them to. The function should return a vector of the batch IDs you provided. If not, the function did not correctly set up your batches.
 
 ### Syntax
@@ -171,8 +162,6 @@ makeComps(email = "johndoe@school.edu", password = "12345",
 ### Output
 
 The `makeComps()` function outputs a named integer vector containing `batch_id`.
-<br>
-<br>
 
 # createTasks
 
@@ -200,8 +189,6 @@ createTasks(email = "johndoe@school.edu", password = "12345",
 -   `password`: Character vector, the password associated with `email`.
 
 -   `batch_id`: Numeric vector, the unique batch ID numbers you generated in `createBatches()`. Only specify the ID numbers for the batches you want to submit to Mechanical Turk now. Batches can be released at separate times.
-<br>
-<br>
 
 # batchStatus
 
@@ -228,8 +215,6 @@ batchStatus(email = "johndoe@school.edu", password = "12345",
 ### Output
 
 The `batchStatus()` function outputs a data frame containing `batch_id`, the total number of comparisons, the number of comparisons submitted, the number of comparisons completed, and the number of comparisons expired in the batch.
-<br>
-<br>
 
 # readInData
 
@@ -258,8 +243,6 @@ comp_output <- readInData(email = "johndoe@school.edu", password = "12345",
 ### Output
 
 The `readInData()` function outputs a data frame containing seven columns and two times as many rows as there are comparisons in the batch. The columns contain the batch ID, comparison ID, document ID, result, hit ID, worker ID, and time completed for each hit.
-<br>
-<br>
 
 # repostExpired
 
