--- a/sentimentIt/vignettes/analyzing_data.Rmd
+++ b/sentimentIt/vignettes/analyzing_data.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "SentimentIt: Analyzing data from Mechanical Turk"
+title: "SentimentIt: Analyzing data from completed pairwise comparisons"
 author: ""
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
@@ -16,6 +16,10 @@ This is a tutorial on how to use the SentimentIt R package. SentimentIt provides
 The system we designed, which we label SentimentIt, is based on the following principles. First, it leverages human ability to understand language and socially constructed political concepts. Thus, our focus is measuring researcher-defined characteristics embedded within text (e.g., positivity). However, we exclude explicitly subjective characteristics (e.g., persuasiveness).
 
 Second, we designed the task structure to be cognitively appropriate for non-experts. Specifically, we ask workers to conduct pairwise comparisons of texts, simply indicating which text is more extreme along a single dimension of interest (e.g., “Which text is more positive?”). A significant body of research indicates that pairwise comparisons can reduce the cognitive burden for respondents, improve the reliability of responses, and eliminate problems such as differential item functioning and reference group effects that plague alternative question formats such as Likert scales or sliders (e.g., King et al. 2004; Oishi et al. 2005).
+
+A diagram of the SentimentIt workflow is shown below.
+
+![**SentimentIt Workflow**](sentimentit_workflow.png)
 
 ## fitStan
 
